--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,13 @@ services:
   - type: web
     name: face-recognition-app
     env: python
-    buildCommand: ./build.sh
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 8
+    buildCommand: chmod +x build.sh && ./build.sh
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT --workers 1 --threads 8 --timeout 120
     envVars:
       - key: PYTHON_VERSION
         value: 3.10.11
+      - key: PYTHONUNBUFFERED
+        value: "true"
     disk:
       name: data
       mountPath: /data
